Updated swagger and read me. Updated schema
